[build-system]
requires = ["hatchling", "hatch-cython", "Cython", "setuptools"]
build-backend = "hatchling.build"

[project]
name = "pyfoma"
dynamic = ["version"]
description = "Python Finite-State Toolkit"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Mans Hulden", email = "mans.hulden@colorado.edu" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "graphviz", "IPython", "tqdm"
]

[project.urls]
"Bug Tracker" = "https://github.com/mhulden/pyfoma/issues"
Homepage = "https://github.com/mhulden/pyfoma"

[tool.hatch.version]
path = "src/pyfoma/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel.hooks.cython]
dependencies = ["hatch-cython"]

[tool.hatch.build.targets.wheel.hooks.cython.options]
compile_py = false

[tool.hatch.envs.default]
dependencies = [
    "IPython",
]

[tool.hatch.envs.hatch-test]
dependencies = [
    "pytest",
    "coverage",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.13"]
